Vue Router and setting the root url

--- a/QuestionTime/templates/index.html
+++ b/QuestionTime/templates/index.html
@@ -1,20 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" href="/static/dist/favicon.ico">
-  <title>QuestionTime</title>
-  <script defer="defer" src="/static/dist/js/chunk-vendors.3677f8cd.js"></script>
-  <script defer="defer" src="/static/dist/js/index.dac821e6.js"></script>
-  <link href="/static/dist/css/index.9c72af2c.css" rel="stylesheet">
-</head>
-
-<body><noscript><strong>We're sorry but QuestionTime doesn't work properly without JavaScript enabled. Please enable it
-      to continue.</strong></noscript>
-  <div id="app"></div>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="http://127.0.0.1:8080/favicon.ico">
+    <title>QuestionTime</title>
+  <script defer src="http://127.0.0.1:8080/js/chunk-vendors.js"></script><script defer src="http://127.0.0.1:8080/js/index.js"></script></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but QuestionTime doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
